[package]
name = "eth2_ssz_types"
version = "0.2.1"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"
description = "Provides types with unique properties required for SSZ serialization and Merklization."
license = "Apache-2.0"

[lib]
name = "ssz_types"

[dependencies]
tree_hash = { path = "/root/secure-signer/tree_hash/tree_hash" }
serde = "1.0"
serde_derive = "1.0"
eth2_serde_utils = "0.1"
eth2_ssz = "0.4.0"
typenum = "1.12.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
derivative = "2.1.1"
smallvec = "1.8.0"

[dev-dependencies]
serde_json = "1.0.58"
tree_hash_derive = "0.4.0"
